<resources>
    <string name="app_name">Tennis Online</string>
    <string name="HelloWords">Please log in or sing up</string>
    <string name="EnterLogin">Enter your nickname</string>
    <string name="EnterPass">Enter password</string>
    <string name="GoPlay">Go play</string>
    <string name="SingUp">Sign up</string>
    <string name="EnterMail">Enter email</string>
    <string name="Join">Join</string>
    <string name="orLogIn">or log in</string>
    <string name="NickName">Nickname</string>
    <string name="StartGame">Start Game</string>
    <string name="Score">Score</string>
    <string name="Exit">X</string>
    <string name="error_login_passwd_undefined">error_login_passwd_undefined</string>

</resources>
